2006-03-13  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/ changing-defaults, instrument-notation,
	tutorial: small fixes from mailist, mostly from Mats.  Thanks!

2006-03-13 Heikki Junes  <hjunes@cc.hut.fi>

	* po/fi.po: update.

2006-03-13  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* stepmake/bin/add-html-footer.py (mail_address_url): don't add
	mailto: to http:// 

	* python/lilylib.py (print_environment): move ps_page_count to lilypond-book.py

2006-03-12  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* Documentation/user/music-glossary.tely (G clef): fix clef alignments.

	* scm/framework-ps.scm (embed-document): new function. Use to
	embed PFA files.

	* ly/engraver-init.ly: init rehearsalMarkAlignSymbol to staff-bar.

2006-03-12  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* Documentation/user/instrument-notation.itely (Setting simple
	songs): Added \book{...} around the full example, so the separate
	markups are included in the printed example. 

2006-03-12  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scripts/lilypond-book.py (get_latex_textwidth): explicitly close
	tmphandle.

	* python/lilylib.py (system): rewrite system() using
	subprocess. Remove >& redirection trickery.

2006-03-11  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/ changing-defaults, global, scheme-tutorial,
	notation-appendices.itely: minor fixes from mailist.

2006-03-11  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* Documentation/user/GNUmakefile ($(outdir)/lilypond.html):
	unsplit man also needs images.

	* tex/texinfo.tex (sectionheading, q.v.): relax after \char'15.

	* VERSION (PACKAGE_NAME): 2.7.38 released.

2006-03-10  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scripts/lilypond-book.py (get_latex_textwidth): look for latex
	log in output dir.

2006-03-08  Johannes Schindelin  <Johannes.Schindelin@gmx.de>

	* lily/audio-column.cc, lily/score-performer.cc: MIDI output now
	respects the Score.skipTypesetting property.
	
2006-03-09  Han-Wen Nienhuys  <hanwen@xs4all.nl>
